--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
-
-
 <!DOCTYPE html>
-<html lang
-
-="en">
+<html lang ="en">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -76,10 +72,10 @@
           logoImg.addEventListener('click', function() {
             if (audio.muted) {
               audio.muted = false;
-              logoImg.style.opacity = '1'; // Reset opacity if unmuted
+              logoImg.style.opacity = '1'; 
             } else {
               audio.muted = true;
-              logoImg.style.opacity = '0.5'; // Reduce opacity if muted
+              logoImg.style.opacity = '0.5'; 
             }
           });
         </script>
@@ -88,6 +84,8 @@
 </body>
 
 </html>
+
+
 
 
 
